--- a/styles/components/main-page/cryptoData.css
+++ b/styles/components/main-page/cryptoData.css
@@ -8,6 +8,7 @@
     align-items: center;
     margin-top: 20px;
     margin: 25px 0;
+    width: 100%;
 
     
 }
