--- a/styles/components/main-page/navBar.css
+++ b/styles/components/main-page/navBar.css
@@ -8,7 +8,8 @@
         align-items: center;   
         border-bottom: 2px solid var(--clr-interaction);
         height: 60px;
-        min-width: 500px;
+        /* min-width: 500px; */
+        width: 100vw;
 
     }
  
